; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_disk_conditioner.c_disk_conditioner_get_info.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_disk_conditioner.c_disk_conditioner_get_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct._disk_conditioner_info_t* }
%struct._disk_conditioner_info_t = type { i32 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @disk_conditioner_get_info(%struct.TYPE_3__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct._disk_conditioner_info_t*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %8 = icmp ne %struct.TYPE_3__* %7, null
  br i1 %8, label %11, label %9

9:                                                ; preds = %2
  %10 = load i32, i32* @EINVAL, align 4
  store i32 %10, i32* %3, align 4
  br label %23

11:                                               ; preds = %2
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load %struct._disk_conditioner_info_t*, %struct._disk_conditioner_info_t** %13, align 8
  store %struct._disk_conditioner_info_t* %14, %struct._disk_conditioner_info_t** %6, align 8
  %15 = load %struct._disk_conditioner_info_t*, %struct._disk_conditioner_info_t** %6, align 8
  %16 = icmp ne %struct._disk_conditioner_info_t* %15, null
  br i1 %16, label %17, label %22

17:                                               ; preds = %11
  %18 = load i32*, i32** %5, align 8
  %19 = load %struct._disk_conditioner_info_t*, %struct._disk_conditioner_info_t** %6, align 8
  %20 = getelementptr inbounds %struct._disk_conditioner_info_t, %struct._disk_conditioner_info_t* %19, i32 0, i32 0
  %21 = call i32 @memcpy(i32* %18, i32* %20, i32 4)
  br label %22

22:                                               ; preds = %17, %11
  store i32 0, i32* %3, align 4
  br label %23

23:                                               ; preds = %22, %9
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @memcpy(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
